@@ -12,6 +12,9 @@ v0.91.13	12-Oct-2007
 	mbnewusr:
 		Added GeoIP support.
 
+	mbnntp:
+		Added GeoIP support.
+
 	mbsetup:
 		Blocked selection of FTN and Usenet moderated message areas.
 		Changed the F-PROT scanner name into fpscan.
